--- a/package.json
+++ b/package.json
@@ -11,6 +11,15 @@
     "publish": "electron-forge publish",
     "lint": "echo \"No linting configured\""
   },
+  "build": {
+    "publish": [
+      {
+        "provider": "github",
+        "owner": "candied-apple",
+        "repo": "axolauncher"
+      }
+    ]
+  },
   "keywords": [],
   "author": {
     "name": "candied apple",
@@ -43,7 +52,9 @@
     "@mui/icons-material": "^7.3.1",
     "@mui/material": "^7.3.1",
     "axocore": "^0.1.6",
+    "electron-log": "^5.4.2",
     "electron-squirrel-startup": "^1.0.1",
+    "electron-updater": "^6.6.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   }
