--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "axolauncher",
   "productName": "axolauncher",
   "version": "1.0.0",
-  "description": "My Electron application description",
+  "description": "A cross-platform launcher for AxoCore",
   "main": ".webpack/main",
   "scripts": {
     "start": "electron-forge start",
@@ -52,10 +52,9 @@
     "@mui/icons-material": "^7.3.1",
     "@mui/material": "^7.3.1",
     "axocore": "^0.1.6",
-    "electron-log": "^5.4.2",
     "electron-squirrel-startup": "^1.0.1",
-    "electron-updater": "^6.6.2",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "update-electron-app": "^3.1.1"
   }
 }
