--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,9 +47,10 @@ jobs:
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
-          files: artifacts/**/*.zip
-          files: artifacts/**/*.exe
-          files: artifacts/**/*.deb
-          files: artifacts/**/*.rpm
+          files: |
+            artifacts/**/*.zip
+            artifacts/**/*.exe
+            artifacts/**/*.deb
+            artifacts/**/*.rpm
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
