--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "axolauncher",
   "productName": "axolauncher",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "A cross-platform launcher for AxoCore",
   "main": ".webpack/main",
   "scripts": {
@@ -27,6 +27,7 @@
     "@babel/preset-react": "^7.27.1",
     "@electron-forge/cli": "^7.8.3",
     "@electron-forge/maker-deb": "^7.8.3",
+    "@electron-forge/maker-dmg": "^7.8.3",
     "@electron-forge/maker-rpm": "^7.8.3",
     "@electron-forge/maker-squirrel": "^7.8.3",
     "@electron-forge/maker-zip": "^7.8.3",
