--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "axolauncher",
   "productName": "axolauncher",
-  "version": "1.0.8",
+  "version": "1.1.5",
   "description": "A cross-platform launcher for AxoCore",
   "main": ".webpack/main",
   "scripts": {
@@ -27,6 +27,7 @@
     "@babel/preset-react": "^7.27.1",
     "@electron-forge/cli": "^7.8.3",
     "@electron-forge/maker-deb": "^7.8.3",
+    "@electron-forge/maker-dmg": "^7.8.3",
     "@electron-forge/maker-rpm": "^7.8.3",
     "@electron-forge/maker-squirrel": "^7.8.3",
     "@electron-forge/maker-zip": "^7.8.3",
@@ -46,7 +47,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.1",
     "@mui/material": "^7.3.1",
-    "axocore": "^0.1.6",
+    "axocore": "^0.1.7",
     "electron-squirrel-startup": "^1.0.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
